# python-starter-kit

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
scripts/: lint.sh
src/sample_app/: main.py
